
package helloworld;
option java_package = "com.study.helloworld";
option java_outer_classname = "HelloWorldProto";
option java_multiple_files = true;
option objc_class_prefix = "HLW";


service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  required string name = 1;
}

message HelloReply {
  required string message = 1;
}